--- a/frontend/src/components/parishPriest/allServices/AllChurchServices.scss
+++ b/frontend/src/components/parishPriest/allServices/AllChurchServices.scss
@@ -35,3 +35,16 @@
     }
   }
 }
+
+.action-wrapper {
+  @include flexRow;
+  align-items: center;
+
+  .edit-icon {
+    @include editIcon;
+  }
+
+  .delete-icon {
+    @include deleteIcon;
+  }
+}
