--- a/frontend/src/components/braveBishops/BraveBishops.scss
+++ b/frontend/src/components/braveBishops/BraveBishops.scss
@@ -3,6 +3,7 @@
 
 .eritrean-bishops {
   margin-top: 2rem;
+
   .sub-title {
     @include subTitle;
     font-size: $aafs;
@@ -13,12 +14,98 @@
     grid-template-columns: repeat(2, 1fr);
     column-gap: 1rem;
 
-    .image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: $radius;
-      cursor: pointer;
+    // Individual image styles
+    figure {
+      margin: 0;
+
+      .image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: $radius;
+        cursor: pointer;
+        transition: transform 0.3s;
+
+        // Scale up on hover for better interaction
+        &:hover {
+          transform: scale(1.05);
+        }
+      }
+    }
+  }
+}
+
+/* Responsive Styles */
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .eritrean-bishops {
+    padding: 0 1rem;
+    .sub-title {
+      font-size: $sfs;
+    }
+
+    .image-container {
+      grid-template-columns: 1fr;
+      row-gap: 1rem;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .eritrean-bishops {
+    padding: 0 1rem;
+    .sub-title {
+      font-size: $afs;
+    }
+
+    .image-container {
+      grid-template-columns: 1fr;
+      row-gap: 1rem;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .eritrean-bishops {
+    padding: 0 1rem;
+    .sub-title {
+      font-size: $afs;
+    }
+
+    .image-container {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 1rem;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .eritrean-bishops {
+    .sub-title {
+      font-size: $afs * 1.1;
+    }
+
+    .image-container {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 1rem;
+    }
+  }
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .eritrean-bishops {
+    .sub-title {
+      font-size: $afs * 1.2;
+    }
+
+    .image-container {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 1.5rem;
     }
   }
 }
