--- a/frontend/src/components/latestEvent/LatestEvent.scss
+++ b/frontend/src/components/latestEvent/LatestEvent.scss
@@ -17,9 +17,11 @@
     .event-description {
       flex: 5;
       @include shadow1;
+
       .event-name {
         font-size: $afs;
       }
+
       .event-purpose {
         @include paragraph;
         font-size: $nfs;
@@ -40,6 +42,135 @@
         color: $gray;
         font-size: $sfs;
       }
+    }
+  }
+}
+
+/* Responsive Styles */
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .latest-event-container {
+    .event-wrapper {
+      flex-direction: column;
+      column-gap: 0.5rem;
+
+      .event-description {
+        flex: unset; // Reset flex property
+        font-size: $sfs;
+
+        .event-name {
+          font-size: $sfs;
+        }
+
+        .event-purpose {
+          font-size: $sfs;
+        }
+      }
+
+      .event-management {
+        flex: unset; // Reset flex property
+      }
+    }
+
+    .latest-event-title {
+      font-size: $afs;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .latest-event-container {
+    .event-wrapper {
+      flex-direction: column;
+      column-gap: 1rem;
+
+      .event-description {
+        font-size: $sfs;
+
+        .event-name {
+          font-size: $sfs;
+        }
+
+        .event-purpose {
+          font-size: $sfs;
+        }
+      }
+
+      .event-management {
+        font-size: $nfs;
+      }
+    }
+
+    .latest-event-title {
+      font-size: $afs;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .latest-event-container {
+    .event-wrapper {
+      flex-direction: column;
+      column-gap: 1.5rem;
+
+      .event-description {
+        font-size: $afs;
+      }
+
+      .event-management {
+        font-size: $nfs;
+      }
+    }
+
+    .latest-event-title {
+      font-size: $afs * 1.2;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .latest-event-container {
+    .event-wrapper {
+      flex-direction: row;
+      row-gap: 1.5rem;
+
+      .event-description {
+        font-size: $afs;
+      }
+
+      .event-management {
+        font-size: $nfs;
+      }
+    }
+
+    .latest-event-title {
+      font-size: $afs * 1.3;
+    }
+  }
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .latest-event-container {
+    .event-wrapper {
+      flex-direction: row;
+      gap: 2rem;
+
+      .event-description {
+        font-size: $afs;
+      }
+
+      .event-management {
+        font-size: $nfs;
+      }
+    }
+
+    .latest-event-title {
+      font-size: $afs * 1.5;
     }
   }
 }
