--- a/frontend/src/components/layout/header/Header.scss
+++ b/frontend/src/components/layout/header/Header.scss
@@ -1,35 +1,12 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
-
-/* Up to 480px (very small mobile screens) */
-@media (max-width: 480px) {
-}
-
-/* Between 481px and 768px (common for most mobile devices) */
-@media (min-width: 481px) and (max-width: 768px) {
-}
-
-/* Between 769px and 1024px (ideal for tablets and small laptops) */
-@media (min-width: 769px) and (max-width: 1024px) {
-}
-
-/* Between 1025px and 1200px (standard desktops) */
-@media (min-width: 1025px) and (max-width: 1200px) {
-  /* CSS rules here */
-}
-
-/* 1201px and up (large desktop and TV screens) */
-@media (min-width: 1201px) { 
-  /* CSS rules here */
-}
-
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
 .header {
   width: 100%;
   height: 12rem;
   display: flex;
   flex-direction: column;
-  background-image: url('../../../assets/church.jpg');
+  background-image: url("../../../assets/church.jpg");
   background-attachment: fixed;
   background-size: cover;
   position: relative;
@@ -69,4 +46,25 @@
       object-fit: cover;
     }
   }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  /* CSS rules here */
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
 }
