--- a/frontend/src/components/news/masses/MassList.scss
+++ b/frontend/src/components/news/masses/MassList.scss
@@ -4,9 +4,57 @@
 .mass-list-container {
   .mass-list-title {
     @include subTitle;
-    font-size: 1.5rem
+    font-size: 1.5rem;
   }
 
+  .mass-list-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .mass-list-container {
+    .mass-list-title {
+      font-size: $nfs;
+      text-align: center;
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .mass-list-container {
+    .mass-list-title {
+      font-size: $nfs;
+      margin: 0.5rem 2rem;
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .mass-list-container {
+    .mass-list-title {
+      font-size: $afs * 1.2;
+      margin: 0.5rem 2rem;
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .mass-list-wrapper {
+    @include twoGridTemplateEqualColumns;
+    column-gap: 1rem;
+    row-gap: 1rem;
+  }
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
   .mass-list-wrapper {
     @include twoGridTemplateEqualColumns;
     column-gap: 1rem;
