--- a/frontend/src/views/newsPage/NewsPage.scss
+++ b/frontend/src/views/newsPage/NewsPage.scss
@@ -1,30 +1,88 @@
-@import '../../styles/Variables.scss';
-@import '../../styles/Mixins.scss';
+@import "../../styles/Variables.scss";
+@import "../../styles/Mixins.scss";
 
-.report-page {
-  .report-page-container {
-    width: $laptop;
+.news-page {
+  .news-page-container {
+    width: $mobile;
     margin: 1rem auto;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 
-    .report-title {
+    .news-page-title {
       @include title;
     }
+  }
+}
 
-    .finance-report {
-      @include shadow1;
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .news-page {
+    .news-page-container {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
 
-      .title {
-        @include subTitle;
+      .news-page-title {
+        font-size: $nfs;
+        text-align: center;
       }
     }
+  }
+}
 
-    .other-report {
-      @include shadow1;
-      .title {
-        @include subTitle;
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .news-page {
+    .news-page-container {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .news-page-title {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .news-page {
+    .news-page-container {
+      width: $tablet;
+      margin: 1rem auto;
+
+      .news-page-title {
+        font-size: $afs;
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .news-page {
+    .news-page-container {
+      width: $laptop;
+      margin: 1rem auto;
+
+      .news-page-title {
+        font-size: $afs;
+      }
+    }
+  }
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .news-page {
+    .news-page-container {
+      width: $desktop;
+      margin: 1rem auto;
+
+      .news-page-title {
+        font-size: $aafs;
       }
     }
   }
