--- a/frontend/src/components/about/parishPriest/ParishPriest.scss
+++ b/frontend/src/components/about/parishPriest/ParishPriest.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/mixins.scss";
 @import "../../../styles/variables.scss";
 
-.parish-priest {
+.parish-priest-wrapper {
   @include shadow1;
 
   .parish-priest-title {
@@ -9,15 +9,11 @@
   }
 
   .image-description-container {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    column-gap: 1rem;
-
     .image-container {
       .priest-image {
-        width: 100%;
+        width: 85%;
         height: 20rem;
-        object-fit: contain;
+        object-fit: cover;
         margin-top: 0.5rem;
         border-radius: 0.3rem;
         cursor: pointer;
@@ -38,6 +34,166 @@
 
       .description2 {
         margin-top: 1rem;
+      }
+    }
+  }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .parish-priest-wrapper {
+    .parish-priest-title {
+      font-size: $nfs;
+    }
+
+    .image-description-container {
+      .image-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+     
+        .priest-image {
+          width: 85%;
+          height: 17rem;
+        }
+
+        .priest-name {
+          font-size: $sfs;
+        }
+      }
+
+      .priest-description {
+        margin-top: 1rem;
+        .description {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .parish-priest-wrapper {
+    .parish-priest-title {
+      text-align: center;
+      font-size: $afs;
+    }
+
+    .image-description-container {
+      .image-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .priest-image {
+          width: 60%;
+          height: 25rem;
+        }
+
+        .priest-name {
+        }
+      }
+
+      .priest-description {
+        margin-top: 1.5rem;
+        .description {
+        }
+
+        .description2 {
+        }
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .parish-priest-wrapper {
+    .parish-priest-title {
+      text-align: center;
+    }
+
+    .image-description-container {
+      .image-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+     
+        .priest-image {
+          width: 70%;
+          height: 30rem;
+         
+        }
+
+        .priest-name {
+        }
+      }
+
+      .priest-description {
+        margin-top: 2rem;
+        .description {
+        }
+
+        .description2 {
+        }
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .parish-priest-wrapper {
+    .parish-priest-title {
+    }
+
+    .image-description-container {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      column-gap: 1rem;
+      .image-container {
+        .priest-image {
+        }
+
+        .priest-name {
+        }
+      }
+
+      .priest-description {
+        .description {
+        }
+
+        .description2 {
+        }
+      }
+    }
+  }
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .parish-priest-wrapper {
+    .parish-priest-title {
+    }
+
+    .image-description-container {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      column-gap: 1rem;
+      .image-container {
+        .priest-image {
+        }
+
+        .priest-name {
+        }
+      }
+
+      .priest-description {
+        .description {
+        }
+
+        .description2 {
+        }
       }
     }
   }
