--- a/frontend/src/components/about/strategicIntent/StrategicIntent.scss
+++ b/frontend/src/components/about/strategicIntent/StrategicIntent.scss
@@ -1,38 +1,156 @@
 @import "../../../styles/mixins.scss";
 @import "../../../styles/variables.scss";
 
-.strategic-intent {
-  margin: 1rem 0;
-  .strategic-intent-subtitle {
-    @include subTitle;
-    font-size: $aafs;
-  }
-  .mission-statement {
-    font-size: $nfs;
-    line-height: $aafs;
-    font-size: $nfs;
-    line-height: $aafs;
-    padding: 1rem 0.5rem;
-  }
-
-  .vision-statement {
-    font-size: $nfs;
-    line-height: $aafs;
-    font-size: $nfs;
-    line-height: $aafs;
-    padding: 1rem 0.5rem;
-  }
-
-  .core-value {
-    .value-title {
+.strategic-intent-wrapper {
+  .strategic-intent {
+    margin: 1rem 0;
+    .strategic-intent-subtitle {
       @include subTitle;
-      font-size: $afs;
-      background-color: $value-bg;
     }
-    .value-description {
+    .mission-statement {
+      font-size: $nfs;
+      line-height: $aafs;
       font-size: $nfs;
       line-height: $aafs;
       padding: 1rem 0.5rem;
+    }
+
+    .vision-statement {
+      font-size: $nfs;
+      line-height: $aafs;
+      font-size: $nfs;
+      line-height: $aafs;
+      padding: 1rem 0.5rem;
+    }
+
+    .core-value {
+      .value-title {
+        @include subTitle;
+        font-size: $afs;
+        background-color: $value-bg;
+      }
+      .value-description {
+        font-size: $nfs;
+        line-height: $aafs;
+        padding: 1rem 0.5rem;
+      }
+    }
+  }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .strategic-intent-wrapper {
+    margin: 0 0.5rem;
+    .strategic-intent {
+      .strategic-intent-subtitle {
+        font-size: $afs;
+      }
+      .mission-statement {
+        font-size: $sfs;
+      }
+
+      .vision-statement {
+        font-size: $sfs;
+      }
+
+      .core-value {
+        .value-title {
+          font-size: $nfs;
+        }
+        .value-description {
+          font-size: $sfs;
+        }
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .strategic-intent-wrapper {
+    .strategic-intent {
+      .strategic-intent-subtitle {
+        font-size: $afs;
+      }
+      .mission-statement {
+      }
+
+      .vision-statement {
+      }
+
+      .core-value {
+        .value-title {
+        }
+        .value-description {
+        }
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .strategic-intent-wrapper {
+    .strategic-intent {
+      .strategic-intent-subtitle {
+      }
+      .mission-statement {
+      }
+
+      .vision-statement {
+      }
+
+      .core-value {
+        .value-title {
+        }
+        .value-description {
+        }
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .strategic-intent-wrapper {
+    .strategic-intent {
+      .strategic-intent-subtitle {
+      }
+      .mission-statement {
+      }
+
+      .vision-statement {
+      }
+
+      .core-value {
+        .value-title {
+        }
+        .value-description {
+        }
+      }
+    }
+  }
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .strategic-intent-wrapper {
+    .strategic-intent {
+      .strategic-intent-subtitle {
+      }
+      .mission-statement {
+      }
+
+      .vision-statement {
+      }
+
+      .core-value {
+        .value-title {
+        }
+        .value-description {
+        }
+      }
     }
   }
 }
