--- a/frontend/src/views/aboutPage/AboutPage.scss
+++ b/frontend/src/views/aboutPage/AboutPage.scss
@@ -4,10 +4,68 @@
 .about-page {
   .about-page-container {
     width: $desktop;
-    margin: 1rem auto;
+    margin: 2rem auto;
 
-    .about-title {
+    .about-page-title {
       @include title;
+    }
+  }
+}
+
+/* Up to 480px (very small mobile screens) */
+@media (max-width: 480px) {
+  .about-page {
+    .about-page-container {
+      width: $mobile;
+      margin: 1rem auto;
+
+      .about-page-title {
+        font-size: $nfs;
+      }
+    }
+  }
+}
+
+/* Between 481px and 768px (common for most mobile devices) */
+@media (min-width: 481px) and (max-width: 768px) {
+  .about-page {
+    .about-page-container {
+      width: $tablet;
+
+      .about-page-title {
+        font-size: $aafs;
+      }
+    }
+  }
+}
+
+/* Between 769px and 1024px (ideal for tablets and small laptops) */
+@media (min-width: 769px) and (max-width: 1024px) {
+  .about-page {
+    .about-page-container {
+      width: $laptop;
+
+      .about-page-title {
+        font-size: $aafs;
+      }
+    }
+  }
+}
+
+/* Between 1025px and 1200px (standard desktops) */
+@media (min-width: 1025px) and (max-width: 1200px) {
+  .about-page {
+    .about-page-container {
+      width: $desktop;
+    }
+  }
+}
+
+/* 1201px and up (large desktop and TV screens) */
+@media (min-width: 1201px) {
+  .about-page {
+    .about-page-container {
+      width: $desktop;
     }
   }
 }
